# codetaste

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  LICENSE  Makefile  README.md  RUNTIME.md  bad_instances.csv  complete_instances.csv  complete_instances_exec_env.csv  entrypoint.sh  example_agent.sh  good_instances.csv  instances.csv  pyproject.toml  run_agent_description.sh  run_agent_evals_rule_only.sh  run_analyze.sh  run_analyze_instance.sh  run_analyze_variants.sh
.github/: download_outputs.sh  publish.sh
agent/: agent_config.json  run_agent  setup_agent.sh
agents/claude/haiku45/: agent_config.json  run_agent  setup_agent.sh
agents/claude/minimax-m2.7/: agent_config.json  run_agent  setup_system.sh
agents/claude/opus45/: run_agent  setup_system.sh
agents/claude/opus46/: agent_config.json  run_agent  setup_system.sh
agents/claude/sonnet45/: agent_config.json  run_agent
agents/codex/gpt5-nano/: agent_config.json  better_codex_wrapper.py  run_agent  setup_system.sh
agents/codex/gpt51-codex/: agent_config.json  codex_wrapper.py  run_agent
agents/codex/gpt51-codex-max/: agent_config.json  codex_wrapper.py  run_agent  setup_system.sh
agents/codex/gpt51-codex-mini/: agent_config.json  better_codex_wrapper.py  codex_wrapper.py  run_agent
agents/codex/gpt52/: better_codex_wrapper.py  codex_wrapper.py  run_agent
agents/test/deterministic/: run_agent  (+2 more)
assets/: default.semgrepignore  discovered_commit_pairs.csv
assets/descriptions/: README.md
assets/rules/: README.md
docs/: analysis.md  benchmarking-your-agent.md  bootstrap.md  evaluation.md  inference.md
notebooks/: plots.ipynb
old_analyze/: analyze_old.py
refactoring_benchmark/analyze/: __init__.py  baseline.py  config.py  diff_stats.py  examples.py  filters.py  loader.py  metrics.py  models.py  plotting.py  sensitivity.py  statistics.py  validation.py
refactoring_benchmark/analyze_instance/: config.py  instance_analysis.py  loader.py  models.py  plotting.py
refactoring_benchmark/base_images/: Dockerfile.all  Dockerfile.javascript  Dockerfile.python
refactoring_benchmark/bootstrap/: __init__.py  cli.py  entrypoint.sh  executor.py  models.py  runtime.py  setup.py  utils.py
refactoring_benchmark/cli/: analyze.py  analyze_instance.py  analyze_sensitivity.py  baseline_results.py  bootstrap.py  build_baseimages.py  create_pseudo_agents.py  e2e_smoke.py  evaluate.py  inference.py
refactoring_benchmark/coverage/: __init__.py  models.py  parse.py  precision.py
refactoring_benchmark/evaluation/: __init__.py  cli.py  executor.py  metrics.py  models.py  parser.py  runner.py
refactoring_benchmark/inference/: __init__.py  cli.py  executor.py  judge.py  models.py  runner.py  runner.py.bak  utils.py  validation.py
refactoring_benchmark/legacy_bootstrap/: __init__.py  config.py
refactoring_benchmark/podman/: __init__.py  shell.py  utils.py
refactoring_benchmark/scripts/: analyze.py  analyze_instance.py  analyze_results.py  bootstrap.py  build_baseimages.py  e2e_pipeline.py  e2e_smoke.py  evaluate.py  execution.py  inference.py  legacy_bootstrap.py
refactoring_benchmark/tools/: __init__.py  build_description.py  calculate_precision.py  compute_pos_rule_bias.py  copy_pseudo_agents.py  create_files_descriptions.py  create_open_descriptions.py  create_pseudo_agents.py  filter_exec_env_instances.py  generate_guessable_description.py  investigate_manually.py  print_diff_coverage.py  print_instance_precision.py
refactoring_benchmark/utils/: __init__.py  common.py  container_utils.py  images.py  logger.py  models.py  paths.py  podman_shell.py  prompts.py
tests/: README.md  __init__.py  conftest.py  test_bootstrap.py  test_container_utils.py  test_logger.py  test_models.py
tests/analyze/: test_metrics_cost.py
tests/coverage/: prediction.diff  rules_negative.sarif  rules_positive.sarif  test_model.py  test_parse.py
tests/evaluation/: test_parse_rule_evaluation.py
tests/inference/: test_edge_cases.py  test_execution_context.py  test_integration_deterministic_agent.py  test_metadata_utils.py  test_runner_flow.py  test_steps.py
tests/podman/: __init__.py  test_utils.py
tests/tools/: test_calculate_precision.py
(+6645 files in other folders)
