[project]
name = "refactoring-benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false

dependencies = [
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=refactoring_benchmark",
    "--cov-report=term-missing",
    "--cov-report=html"
]
